bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: not found: value R
  if (litMessage()==R) {
                    ^BDR:6: error: not found: value L
  } else if (litMessage()==L) {
                           ^BDR:9: error: not found: value I
  }else if (litMessage()==I) {
                          ^BDR:13: error: not found: value A
  }else if (litMessage()==A) {
                          ^BDR:15: error: not found: value B
  }else if (litMessage()==B) {
                          ^BDR:18: error: not found: value C
  }else if (litMessage()==C) {
                          ^BDR:22: error: not found: value Z
  }else if (litMessage()==Z) {
                          ^BDR:24: error: not found: value Y
  }else if (litMessage()==Y) {
                          ^BDR:27: error: not found: value X
  }else if (litMessage()==X) {
                          ^BDR:32: error: not found: value False
    a= False;
       ^BDR:34: error: not found: value False
  if (a!=False) {
         ^